testquentin/compiling_error.txt
In file included from /usr/include/c++/5/chrono:35:0,
                 from /home/osboxes/Documents/ProjetSinoquet/project_c_sinoquet/testAntoine/CSVParser.cpp:4:
/usr/include/c++/5/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support \
  ^
In file included from /home/osboxes/Documents/ProjetSinoquet/project_c_sinoquet/testAntoine/CSVParser.hpp:11:0,
                 from /home/osboxes/Documents/ProjetSinoquet/project_c_sinoquet/testAntoine/CSVParser.cpp:6:
/home/osboxes/Documents/ProjetSinoquet/project_c_sinoquet/include/boost_1_68_0/boost/numeric/ublas/matrix.hpp:17:28: fatal error: boost/config.hpp: Aucun fichier ou dossier de ce type
 #include <boost/config.hpp>
                            ^
compilation terminated.
